feat: Add policies.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				</div>
 				<div class="footer-nav">
 					<ul>
+						<li><a href="/policies">Policies</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">About Us</a></li>
 					</ul>
