fix: wrong link position.

--- a/policies/index.html
+++ b/policies/index.html
@@ -12,7 +12,7 @@
 				<h1>Our Policies</h1>
 				<ul class="policies-list">
 					<li class="policies-list-item">
-						<a href="./privacy.html"></a><h2>Privacy Policy</h2>
+						<a href="./privacy.html"><h2>Privacy Policy</h2></a>
 						<p>How we collect, use, and protect your personal information.</p>
 					</li>
 <!--					<li class="policies-list-item">-->
