feat: Updated refund and privacy policies.

--- a/index.html
+++ b/index.html
@@ -14,21 +14,13 @@
 					Services
 				</h1>
 			</a>
-			<a
-					href="#2"
-					class="card"
-					style="background: url(./assets/img/development.jpg)"
-			>
+			<a href="#2" class="card" style="background: url(./assets/img/development.jpg)">
 				<h1>
 					Software <br/>
 					Development
 				</h1>
 			</a>
-			<a
-					href="#3"
-					class="card"
-					style="background: url(./assets/img/events.jpg)"
-			>
+			<a href="#3" class="card" style="background: url(./assets/img/events.jpg)">
 				<h1>
 					Live <br/>
 					Events
@@ -45,7 +37,7 @@
 				</div>
 				<div class="footer-nav">
 					<ul>
-						<li><a href="/policies">Policies</a></li>
+						<li><a href="policies">Policies</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">About Us</a></li>
 					</ul>
