--- a/policies/index.html
+++ b/policies/index.html
@@ -8,12 +8,16 @@
 	</head>
 	<body>
 		<main>
-			<section class="policies-section">
-				<h1>Our Policies</h1>
+			<section class="policies-section content">
+				<div class="content-title">
+					<h1>Our Policies</h1>
+				</div>
 				<ul class="policies-list">
-					<li class="policies-list-item">
-						<a href="./privacy.html"><h2>Privacy Policy</h2></a>
-						<p>How we collect, use, and protect your personal information.</p>
+					<li class="policies-list-item content-box">
+						<a href="./privacy.html"><h2>Privacy Policy</h2><p>How we collect, use, and protect your personal information.</p></a>
+					</li>
+					<li class="policies-list-item content-box">
+						<a href="refunds/"><h2>Refund Policies</h2><p>How refunds work for various services.</p></a>
 					</li>
 <!--					<li class="policies-list-item">-->
 <!--						<h2>Terms of Service</h2>-->
@@ -41,6 +45,7 @@
 				</div>
 				<div class="footer-nav">
 					<ul>
+						<li><a href="../policies">Policies</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">About Us</a></li>
 					</ul>
