--- a/policies/privacy.html
+++ b/policies/privacy.html
@@ -8,25 +8,28 @@
 </head>
 <body>
     <main>
-        <section class="policies-section">
-            <h1>Privacy Policy</h1>
-            <div class="policy-content">
-                <div>
-                    <h2>Effective Date</h2>
+        <section class="policies-section content">
+            <div class="content-title">
+                <h1>Privacy Policy</h1>
+                <div class="policy-date">
+                    <p>Effective Date:</p>
                     <p>02/09/2025</p>
                 </div>
-                <div>
+            </div>
+            
+            <div class="policy-content">
+                <div class="content-box">
                     <h2>Who We Are</h2>
                     <p>
-                        We are Axium Lumina, a consulting and managed services provider registered in England & Wales.
+                        We are Axium Lumina, a sole trader acting as a consulting and managed services provider registered in England & Wales.
 						We act as a “Data Controller” for the purposes of the UK General Data Protection Regulation (“UK GDPR”) and the Data Protection Act 2018.
                     </p>
                     <p>If you have any questions about this policy or your rights, please contact us at: </p>
-                    <ul style="text-align:left;">
+                    <ul class="nolist" style="text-align:left;">
                         <li>Email: <a href="mailto:data-protection@axium-lumina.co.uk">Axium Lumina Data Protection</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Information We Collect</h2>
                     <p>We may collect and process the following types of personal data:</p>
                     <ul style="text-align:left;">
@@ -37,7 +40,7 @@
 						<li>Employee information: right to work, internal company communications, performance evaluations.</li>
                     </ul>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>How We Use Your Information</h2>
                     <ul style="text-align:left;">
                         <li>Provide and manage our consulting and managed services.</li>
@@ -48,7 +51,7 @@
 						<li>Managing our team.</li>
                     </ul>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Lawful Basis for Processing</h2>
                     <ul style="text-align:left;">
                         <li>Contract – where processing is necessary for providing our services or being hired as an employee.</li>
@@ -57,7 +60,7 @@
                         <li>Consent – where you have given clear consent (e.g., for marketing communications).</li>
                     </ul>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Sharing Your Information</h2>
                     <p>We will never sell your personal data. However, we may share it with trusted third parties for business purposes, including:</p>
                     <ul style="text-align:left;">
@@ -72,20 +75,20 @@
                     </ul>
                     <p>All third parties are required to protect your data in line with UK GDPR.</p>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>International Transfers</h2>
                     <p>
 						Some of our service providers (including Zoho, Cloudflare and Google Workspace) may transfer data outside the UK/EEA.
 						In such cases, we ensure appropriate safeguards are in place, such as Standard Contractual Clauses or adequacy decisions, to protect your information.
 					</p>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Data Retention</h2>
                     <p>
 						We will keep your personal data only as long as necessary for the purposes outlined in this policy, including satisfying legal, accounting, or reporting requirements.
 					</p>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Your Rights</h2>
                     <p>Under UK GDPR, you have the following rights:</p>
                     <ul style="text-align:left;">
@@ -98,11 +101,11 @@
                     </ul>
                     <p>To exercise these rights, please contact us at the above listed address.</p>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Security of Your Data</h2>
                     <p>We use appropriate technical and organisational measures to protect your personal data against loss, misuse, and unauthorised access.</p>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Complaints</h2>
                     <p>
 						If you have concerns about our use of your personal data, please contact us first.
@@ -112,7 +115,7 @@
                         <li>Phone: +44 0303 123 1113</li>
                     </ul>
                 </div>
-                <div>
+                <div class="content-box">
                     <h2>Changes to This Policy</h2>
                     <p>We may update this Privacy Policy from time to time. The latest version will always be published on our website, with the date of revision clearly shown.</p>
                 </div>
@@ -125,10 +128,11 @@
                 <img class="logo" src="../assets/img/Axium-HSolid-White.svg"/>
             </div>
             <div class="footer-nav">
-                <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
+				<ul>
+					<li><a href="../policies">Policies</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">About Us</a></li>
+				</ul>
                 <div class="footer-imprint">
                     © 2025 Axium Lumina. <br/>
                     All rights reserved.
