feat: Add "return to refund policy" button.

--- a/policies/refunds/development.html
+++ b/policies/refunds/development.html
@@ -15,8 +15,11 @@
                     <p>Effective Date:</p>
                     <p>29/10/2025</p>
                 </div>
+				<div class="policy-return">
+					<a href="./">Return to<br>Refunds Policy</a>
+				</div>
             </div>
-            
+
             <div class="policy-content">
                 <div class="content-box">
                     <h2>Milestones & Progress Payments</h2>
