--- a/policies/refunds/development.html
+++ b/policies/refunds/development.html
@@ -73,11 +73,11 @@
             <div class="footer-nav">
 				<ul>
 					<li><a href="..">Policies</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">About Us</a></li>
+					<!-- <li><a href="#">Blog</a></li> -->
+					<!-- <li><a href="#">About Us</a></li> -->
 				</ul>
                 <div class="footer-imprint">
-                    © 2025 Axium Lumina. <br/>
+                    © 2025 Axium Lumina / Joshua Piper. <br/>
                     All rights reserved.
                 </div>
             </div>
