feat: Add hire terms.

--- a/policies/index.html
+++ b/policies/index.html
@@ -19,29 +19,16 @@
 					<li class="policies-list-item content-box">
 						<a href="refunds/"><h2>Refund Policies</h2><p>How refunds work for various services.</p></a>
 					</li>
-<!--					<li class="policies-list-item">-->
-<!--						<h2>Terms of Service</h2>-->
-<!--						<p>Rules and guidelines for using our website and services.</p>-->
-<!--					</li>-->
-<!--					<li class="policies-list-item">-->
-<!--						<h2>Cookie Policy</h2>-->
-<!--						<p>Information about cookies and how we use them.</p>-->
-<!--					</li>-->
-<!--					<li class="policies-list-item">-->
-<!--						<h2>Data Retention Policy</h2>-->
-<!--						<p>How long we keep your data and how it is managed.</p>-->
-<!--					</li>-->
-<!--					<li class="policies-list-item">-->
-<!--						<h2>Security Policy</h2>-->
-<!--						<p>Measures we take to keep your data safe.</p>-->
-<!--					</li>-->
+					<li class="policies-list-item content-box">
+						<a href="./hire.html"><h2>Hire Policy</h2><p>Terms, charges and responsibilities for equipment and services hired from Axium Lumina.</p></a>
+					</li>
 				</ul>
 			</section>
 		</main>
 		<footer>
 			<div class="footer-main">
 				<div class="footer-logo">
-					<img class="logo" src="../assets/img/Axium-HSolid-White.svg"/>
+					<img class="logo" src="../assets/img/Axium-HSolid-White.svg" alt="Axium Lumina logo"/>
 				</div>
 				<div class="footer-nav">
 					<ul>
