--- a/policies/refunds/development.html
+++ b/policies/refunds/development.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Axium Lumina - Privacy Policy</title>
     <link rel="stylesheet" href="../../assets/css/main.css"/>
+	<link rel="stylesheet" href="../assets/css/print.css" media="print"/>
 </head>
 <body>
     <main>
