feat: Add policy changes section.

--- a/policies/hire.html
+++ b/policies/hire.html
@@ -157,6 +157,11 @@
                     <h2>15. Governing Law</h2>
                     <p>These terms are governed by the laws of England &amp; Wales.</p>
                 </div>
+
+                <div class="content-box">
+                    <h2>Changes to This Policy</h2>
+                    <p>We may update these Terms &amp; Conditions from time to time. The latest version will always be published on our website, with the date of revision clearly shown.</p>
+                </div>
             </div>
         </section>
     </main>
