--- a/policies/refunds/index.html
+++ b/policies/refunds/index.html
@@ -14,7 +14,7 @@
                 <h1>Refund Policies</h1>
                 <div class="policy-date">
                     <p>Effective Date:</p>
-                    <p>29/10/2025</p>
+                    <p>10/12/2025</p>
                 </div>
             </div>
             
@@ -91,6 +91,11 @@
 				services they expect.<br>
 
 				By engaging our services, clients acknowledge and agree to these terms.</p>
+                </div>
+
+                <div class="content-box">
+                    <h2>Changes to This Policy</h2>
+                    <p>We may update this Refund Policy from time to time. The latest version will always be published on our website, with the date of revision clearly shown.</p>
                 </div>
             </div>
         </section>
