--- a/policies/refunds/development.html
+++ b/policies/refunds/development.html
@@ -14,7 +14,7 @@
                 <h1>Development Services Refunds</h1>
                 <div class="policy-date">
                     <p>Effective Date:</p>
-                    <p>29/10/2025</p>
+                    <p>10/12/2025</p>
                 </div>
 				<div class="policy-return">
 					<a href="./">Return to<br>Refunds Policy</a>
@@ -57,11 +57,17 @@
                 </div>
                 <div class="content-box">
                     <h2>Digital Nature of Work</h2>
-                    <p>All services provided are custom, digital, and tailored specifically for the
-				client’s project.<br>
-				As such, once work is delivered, no refunds will be issued.<br>
+                    <p>
+						All services provided are custom, digital, and tailored specifically for the client's project.<br>
+						As such, once work is delivered, no refunds will be issued.<br>
 
-				Clients are encouraged to review all work at each milestone to ensure satisfaction.</p>
+						Clients are encouraged to review all work at each milestone to ensure satisfaction.
+					</p>
+                </div>
+
+                <div class="content-box">
+                    <h2>Changes to This Policy</h2>
+                    <p>We may update this Refund Policy from time to time. The latest version will always be published on our website, with the date of revision clearly shown.</p>
                 </div>
             </div>
         </section>
