--- a/policies/hire.html
+++ b/policies/hire.html
@@ -9,6 +9,24 @@
 </head>
 <body>
     <main>
+        <div class="print-header">
+            <div class="print-header-left">
+                <img src="../assets/img/Axium-HSolid-Black@3x.png" alt="Axium Lumina Logo">
+            </div>
+            <div class="print-header-center">
+                Axium Lumina<br>
+                Joshua Piper<br>
+                55 Huckley Way<br>
+                Bradley Stoke<br>
+                Bristol, BS32 8AR<br>
+                United Kingdom
+            </div>
+            <div class="print-header-right">
+                <div class="policy-name">Hire Terms &amp; Conditions</div>
+                <div class="effective-date">Effective Date: 10/12/2025</div>
+            </div>
+        </div>
+
         <section class="policies-section content">
             <div class="content-title">
                 <h1>Hire Terms &amp; Conditions</h1>
@@ -20,7 +38,8 @@
 
             <div class="policy-content">
                 <div class="content-box">
-                    <p><strong>Axium Lumina / Joshua Piper</strong> ("the Provider") supplies equipment and services under the following Terms &amp; Conditions.Final wording may be adjusted per contract or hire agreement.</p>
+                    <p><strong>Axium Lumina</strong> ("the Provider") supplies equipment and services under the following Terms &amp; Conditions.<br>
+						Final wording may be adjusted per contract or hire agreement.</p>
                 </div>
 
                 <div class="content-box">
