feat: Add missing print headers.

--- a/policies/refunds/development.html
+++ b/policies/refunds/development.html
@@ -9,6 +9,24 @@
 </head>
 <body>
     <main>
+        <div class="print-header">
+            <div class="print-header-left">
+                <img src="../../assets/img/Axium-HSolid-Black@3x.png" alt="Axium Lumina Logo">
+            </div>
+            <div class="print-header-center">
+                Axium Lumina<br>
+                Joshua Piper<br>
+                55 Huckley Way<br>
+                Bradley Stoke<br>
+                Bristol, BS32 8AR<br>
+                United Kingdom
+            </div>
+            <div class="print-header-right">
+                <div class="policy-name">Development Services Refunds</div>
+                <div class="effective-date">Effective Date: 10/12/2025</div>
+            </div>
+        </div>
+
         <section class="policies-section content">
             <div class="content-title">
                 <h1>Development Services Refunds</h1>
